--- a/motion_plan/CMakeLists.txt
+++ b/motion_plan/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   std_msgs
   roscpp
+  tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -136,6 +137,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 ##add_executable(${PROJECT_NAME}_obstacle_avoidance_node src/obstacle_avoidance.cpp)
+add_executable(${PROJECT_NAME}_ur_2_mobile_tf_node src/ur2mobile.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -149,7 +151,7 @@ include_directories(
 
 ## Specify libraries to link a library or executable target against
 ##target_link_libraries(${PROJECT_NAME}_obstacle_avoidance_node ${catkin_LIBRARIES})
-
+target_link_libraries(${PROJECT_NAME}_ur_2_mobile_tf_node ${catkin_LIBRARIES})
 
 #############
 ## Install ##
